feat: func create movie

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -3,3 +3,10 @@ actor.update_success = Actor updated successfully
 actor.delete_success = Actor deleted successfully
 actor.not_found = Actor not found
 actor.get_details = Actor details retrieved successfully
+
+
+## Movies
+movie.create_success = Movie created successfully
+movie.update_success = Movie updated successfully
+movie.delete_success = Movie deleted successfully
+movie.not_found = Movie not found
