--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -4,3 +4,10 @@ actor.update_success = Cập nhật diễn viên thành công
 actor.delete_success = Xóa diễn viên thành công
 actor.not_found = Không tìm thấy diễn viên
 actor.get_details = Lấy thông tin diễn viên thành công
+
+
+## Movie
+movie.create_success = Tạo phim thành công
+movie.update_success = Cập nhật phim thành công
+movie.delete_success = Xóa phim thành công
+movie.not_found = Không tìm thấy phim
