--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -11,3 +11,38 @@ movie.create_success = Tạo phim thành công
 movie.update_success = Cập nhật phim thành công
 movie.delete_success = Xóa phim thành công
 movie.not_found = Không tìm thấy phim
+
+## Genre
+genre.create_success = Tạo thể loại thành công
+genre.update_success = Cập nhật thể loại thành công
+genre.delete_success = Xóa thể loại thành công
+genre.not_found = Không tìm thấy thể loại
+genre.get_details = Lấy thông tin thể loại thành công
+
+## Format
+format.create_success = Tạo cấu trúc ghế thành công
+format.update_success = Cập nhật cấu trúc ghế thành công
+format.delete_success = Xóa cấu trúc ghế thành công
+format.not_found = Không tìm thấy cấu trúc ghế 
+
+
+## Limit Age
+limit_age.create_success = Tạo giới hạn tuổi thành công
+limit_age.update_success = Cập nhật giới hạn tuổi thành công
+limit_age.delete_success = Xóa giới hạn tuổi thành công
+limit_age.not_found = Không tìm thấy giới hạn tuổi
+limit_age.get_details = Lấy thông tin giới hạn tuổi thành công
+
+## Seat
+seat.create_success = Tạo ghế thành công
+seat.update_success = Cập nhật ghế thành công
+seat.delete_success = Xóa ghế thành công
+seat.not_found = Không tìm thấy ghế
+seat.get_details = Lấy thông tin ghế thành công
+
+## Language
+language.create_success = Create language successfully
+language.update_success = Update language successfully
+language.delete_success = Delete language successfully
+language.not_found = Language not found
+language.get_details = Get language details successfully
