fix Message Key for each Controller

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -39,6 +39,7 @@ seat.update_success = Update seat successfully
 seat.delete_success = Delete seat successfully
 seat.not_found = Seat not found
 seat.get_details = Get seat details successfully
+seat.get_all = Get all seats successfully
 
 
 ## Language
