--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -39,6 +39,7 @@ seat.update_success = Cập nhật ghế thành công
 seat.delete_success = Xóa ghế thành công
 seat.not_found = Không tìm thấy ghế
 seat.get_details = Lấy thông tin ghế thành công
+seat.get_all = Lấy tất cả ghế thành công
 
 ## Language
 language.create_success = Create language successfully
