feat: done crud movies

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -6,6 +6,8 @@ actor.get_details = Actor details retrieved successfully
 
 
 ## Movies
+movie.get_details = Movie details retrieved successfully
+movie.get_all_success = Get all movies successfully
 movie.create_success = Movie created successfully
 movie.update_success = Movie updated successfully
 movie.delete_success = Movie deleted successfully
