--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -7,6 +7,8 @@ actor.get_details = Lấy thông tin diễn viên thành công
 
 
 ## Movie
+movie.get_details = Lấy thông tin phim thành công
+movie.get_all_success = Lấy danh sách phim thành công
 movie.create_success = Tạo phim thành công
 movie.update_success = Cập nhật phim thành công
 movie.delete_success = Xóa phim thành công
