--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -43,8 +43,11 @@ seat.get_all = Get all seats successfully
 
 
 ## Language
-language.create_success = Tạo ngôn ngữ thành công
-language.update_success = Cập nhật ngôn ngữ thành công
-language.delete_success = Xóa ngôn ngữ thành công
-language.not_found = Không tìm thấy ngôn ngữ
-language.get_details = Lấy thông tin ngôn ngữ thành công
+language.create_success = Create language successfully
+language.update_success = Update language successfully
+language.delete_success = Delete language successfully
+language.not_found = Language not found
+language.get_details = Get language details successfully
+
+## ROOM
+room.create_success = Room created successfully
