--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -43,9 +43,18 @@ seat.not_found = Không tìm thấy ghế
 seat.get_details = Lấy thông tin ghế thành công
 seat.get_all = Lấy tất cả ghế thành công
 
+
 ## Language
-language.create_success = Create language successfully
-language.update_success = Update language successfully
-language.delete_success = Delete language successfully
-language.not_found = Language not found
-language.get_details = Get language details successfully
+language.create_success = Tạo ngôn ngữ thành công
+language.update_success = Cập nhật ngôn ngữ thành công
+language.delete_success = Xóa ngôn ngữ thành công
+language.not_found = Không tìm thấy ngôn ngữ
+language.get_details = Lấy thông tin ngôn ngữ thành công
+
+## Theater
+theater.get_all_success = Lấy danh sách rạp chiếu phim thành công
+theater.not_found = Không tìm thấy rạp chiếu phim
+
+
+## Room
+room.get_all_success = Lấy danh sách phòng chiếu thành công
