--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -57,3 +57,4 @@ theater.not_found = Theater not found
 
 ## Room
 room.get_all_success = Get all rooms successfully
+room.not_found = Room not found
