--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -58,3 +58,4 @@ theater.not_found = Không tìm thấy rạp chiếu phim
 
 ## Room
 room.get_all_success = Lấy danh sách phòng chiếu thành công
+room.not_found = Không tìm thấy phòng chiếu
