feat: update validate showtime

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -58,3 +58,10 @@ theater.not_found = Theater not found
 ## Room
 room.get_all_success = Get all rooms successfully
 room.not_found = Room not found
+
+## Showtime
+showtime.create_success = Create showtime successfully
+showtime.update_success = Update showtime successfully
+showtime.delete_success = Delete showtime successfully
+showtime.not_found = Showtime not found
+showtime.invalid_time = Invalid showtime time
