--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -59,3 +59,10 @@ theater.not_found = Không tìm thấy rạp chiếu phim
 ## Room
 room.get_all_success = Lấy danh sách phòng chiếu thành công
 room.not_found = Không tìm thấy phòng chiếu
+
+## Showtime
+showtime.create_success = Tạo lịch chiếu thành công
+showtime.update_success = Cập nhật lịch chiếu thành công
+showtime.delete_success = Xóa lịch chiếu thành công
+showtime.not_found = Không tìm thấy lịch chiếu
+showtime.invalid_time = Thời gian lịch chiếu không hợp lệ
