feat: check conflict showtime

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -65,3 +65,4 @@ showtime.update_success = Update showtime successfully
 showtime.delete_success = Delete showtime successfully
 showtime.not_found = Showtime not found
 showtime.invalid_time = Invalid showtime time
+showtime.get_details = Get showtime details successfully
