--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -66,3 +66,4 @@ showtime.update_success = Cập nhật lịch chiếu thành công
 showtime.delete_success = Xóa lịch chiếu thành công
 showtime.not_found = Không tìm thấy lịch chiếu
 showtime.invalid_time = Thời gian lịch chiếu không hợp lệ
+showtime.conflict = Lịch chiếu đã tồn tại
