feat: testing websocket

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -60,6 +60,7 @@ room.get_all_success = Get all rooms successfully
 room.not_found = Room not found
 
 ## Showtime
+showtime.get_all_success = Get all showtimes successfully
 showtime.create_success = Create showtime successfully
 showtime.update_success = Update showtime successfully
 showtime.delete_success = Delete showtime successfully
