--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -61,6 +61,7 @@ room.get_all_success = Lấy danh sách phòng chiếu thành công
 room.not_found = Không tìm thấy phòng chiếu
 
 ## Showtime
+showtime.get_all_success = Lấy danh sách lịch chiếu thành công
 showtime.create_success = Tạo lịch chiếu thành công
 showtime.update_success = Cập nhật lịch chiếu thành công
 showtime.delete_success = Xóa lịch chiếu thành công
