fix : fixing merging error

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -58,7 +58,7 @@ theater.not_found = Theater not found
 ## Room
 room.get_all_success = Get all rooms successfully
 room.not_found = Room not found
-
+room.create_success = Create room successfully
 ## Showtime
 showtime.get_all_success = Get all showtimes successfully
 showtime.create_success = Create showtime successfully
