--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -59,7 +59,7 @@ theater.not_found = Không tìm thấy rạp chiếu phim
 ## Room
 room.get_all_success = Lấy danh sách phòng chiếu thành công
 room.not_found = Không tìm thấy phòng chiếu
-
+room.create_success = Tạo phòng chiếu thành công
 ## Showtime
 showtime.get_all_success = Lấy danh sách lịch chiếu thành công
 showtime.create_success = Tạo lịch chiếu thành công
