feat: get showtime, create url payment

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -67,3 +67,14 @@ showtime.delete_success = Delete showtime successfully
 showtime.not_found = Showtime not found
 showtime.invalid_time = Invalid showtime time
 showtime.get_details = Get showtime details successfully
+
+## User
+user.not_found = User not found
+
+
+## Payment
+payment.create_url_success = Successfully created payment URL
+payment.create_url_failed = Failed to create payment URL
+
+## Schedule
+schedule.get_all_success = Get all schedules successfully
