--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -68,3 +68,14 @@ showtime.delete_success = Xóa lịch chiếu thành công
 showtime.not_found = Không tìm thấy lịch chiếu
 showtime.invalid_time = Thời gian lịch chiếu không hợp lệ
 showtime.conflict = Lịch chiếu đã tồn tại
+
+## User
+user.not_found = Không tìm thấy người dùng
+
+## Payment
+payment.create_url_success = Tạo URL thanh toán thành công
+payment.create_url_failed = Tạo URL thanh toán thất bại
+
+
+## Schedule
+schedule.get_all_success = Lấy danh sách lịch chiếu thành công
